@@ -245,7 +245,13 @@
 <td></td>
 <td><p>selected aerosol type</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>index</strong></p></td>
+<tr class="row-odd"><td><p><strong>wavelength</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>spectral</em>}</p></td>
+<td><p>[nm]</p></td>
+<td><p>wavelength</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>index</strong></p></td>
 <td><p>int32</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td></td>
@@ -384,6 +390,10 @@
 <tr class="row-odd"><td><p><strong>aerosol_type</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/aerosol_type</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><strong>wavelength</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/wavelength</strong></p></td>
 </tr>
 </tbody>
 </table>
