@@ -1,4 +1,5 @@
 * Updates to product ingestions:
+  - S5P PAL L2 AER_OT: added missing wavelength variable.
   - S5P PAL L2 CHOCHO: fixed missing units for number density variables.
 
 1.20 2023-09-19
